# KB_BS_local-wiki-he

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION.md  NOTICE  PRD.md  README.md  SCHEMA.md  SCHEMA_QUERY.md  agent.py  app.py  file_processor.py  ollama_client.py  pyproject.toml  schema_loader.py  template_loader.py  tools.py  tunnel.sh  wiki_engine.py
.claude/: settings.json
.claude/commands/: documentation-update.md
.streamlit/: config.toml
bench/: fixture_KI.json  fixture_KI_chunk.json  fixture_Strahlenschutz.json  fixture_Strahlenschutz_chunk.json
data/chunks/: atev.jsonl  atg.jsonl  din-25422-2026-04.jsonl  din-25425-1-2021-05.jsonl  din-25425-1-beiblatt-1-2022-06.jsonl  din-25425-3-2019-12.jsonl  din-25425-4-1-2013-06.jsonl  din-25425-4-2019-12.jsonl  din-25425-5-2024-12.jsonl  infineon-investment-idea.jsonl  jc-8-bericht-deutschland-atomenergie-bf.jsonl  munich-re-muv2-full-deep-dive-investment-report.jsonl  python-pdf-libraries-deep-comparison.jsonl  sap-se-investment-research-overview.jsonl  schaeffler-ag-investment-overview.jsonl  siemens-ag-investment-research-overview.jsonl
data/index/: acronyms.json  aliases.json  facts.jsonl  postings.json  qa.jsonl  stats.json  terms.json  trigrams.json
data/raw/: AtDeckV.md  AtG.md  DIN 25425-1 Beiblatt 1_2022-06.md  DIN 25425-1_2021-05 .md  DIN 25425-3_2019-12.md  DIN 25425-4-1_2013-06.md  DIN 25425-4_2019-12.md  DIN 25425-5_2024-12.md  Infineon Investment Idea.md  StrlSchG_01.md  StrlSchG_02.md  (+7 more)
docs/: LocalWiki Implementation — Critical Analysis & Improvement Roadmap.md  _bup_CLAUDE.md  architecture.md  changelog-archive.md  changelog.md  domain.md  okf.md  openissues.md  retrieval.md  tech.md  tests.md  ui.md  wiki.md
scripts/: backfill_embeddings.py  bench_retrieval.py  dedup_sections.py  dedup_wiki.py  okf_migrate.py
src/: agent.py  app.py  auth.py  chat_agent.py  chunker.py  db_context.py  dedup.py  embed_index.py  extractor.py  file_processor.py  gpu_widget.py  lang.py  lex_index.py  md_convert.py  metadata_extract.py  okf.py  ollama_client.py  prompts.py  qa_gen.py  rerank.py  retrieval.py  run_memory.py  schema_loader.py  template_loader.py  tools.py  wiki_engine.py
templates/: insert.md
tests/: conftest.py  test_agent.py  test_auth.py  test_chat_agent.py  test_chunker.py  test_consolidate.py  test_db_context.py  test_dedup.py  test_dedup_routing.py  test_embed_index.py  test_extractor.py  test_file_processor.py  test_integration.py  test_lang.py  test_lex_index.py  test_md_convert.py  test_metadata_extract.py  test_multi_db.py  test_okf.py  test_ollama_client.py  test_qa_gen.py  test_rerank.py  test_schema_loader.py  test_tools.py  test_wiki_engine.py
(+359 files in other folders)
