[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localwiki"
version = "0.1.0"
description = "Fully local Karpathy-style self-compiling wiki powered by Ollama"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.3",
    "numpy>=1.26",
    "tavily-python>=0.3",
    "pypdf>=4.0",
    "pypdfium2>=4.0",
    "pillow>=10.0",
    "python-docx>=1.1",
    "python-frontmatter>=1.1",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
    "pyvis>=0.3",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "markdownify>=0.13",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Stage D cross-encoder reranker. Optional on purpose: retrieval degrades to plain
# RRF fusion without it (src/rerank.py). NOTE: the prebuilt "linux_x86_64" wheels on
# abetlen.github.io are musl-linked and fail to import on glibc — install from sdist.
rerank = ["llama-cpp-python>=0.3.19"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
